# kotoba

./: .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.light  LICENSE  MANIFEST.in  Makefile  README.ja.md  README.md  README.zh-CN.md  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml  github_info.md  install.sh  pyproject.toml  requirements.txt  setup.py
configs/: default.yaml  dev.yaml  models.yaml  qwen_config.yaml  tiny_model.yaml
src/kotoba/: __init__.py  __main__.py  assertions.py  browser.py  config.py  llm.py  mock_llm.py  optimized_runner.py  robust_runner.py  runner.py
tests/: basic_navigation_test.yaml  benchmark_chinese_test.yaml  benchmark_english_test.yaml  benchmark_japanese_test.yaml  benchmark_scenarios.yaml  example_test.yaml  github_test.yaml  httpbin_test.yaml  japanese_test.yaml  mock_test.yaml  multilingual_benchmark.yaml  run_benchmark.py  simple_google_test.yaml  test_assertions.yaml  test_config.py  test_enhanced_patterns.yaml  test_extended_patterns.yaml  test_multilingual_assertions.yaml  test_runner.py  test_unmatched_patterns.yaml  the_internet_test.yaml  yahoo_japan_test.yaml
